edited html tables

--- a/community/sbw/SBW/SBW_2014.html
+++ b/community/sbw/SBW/SBW_2014.html
@@ -5,61 +5,59 @@ sitemap: community/sbw
 ---
 
 
-<h2>2014 SOYBEAN BREEDERS', PHYSIOLOGISTS', &amp; AGRONOMISTS' WORKSHOP</h2>
-
+<h2>2014 SOYBEAN BREEDERS', PHYSIOLOGISTS' &amp; AGRONOMISTS' WORKSHOP</h2>
 <hr />
-<h3>Workshop Coordinators:</h3>
-Katy Martin Rainey (Public Breeder), Purdue Univ. - Overall planning and coordination<br /> 
-Hari Ramasubramaniam (Plant Pathologist), Syngenta Seeds Inc. - Hotel arrangements<br />
-Danny Singh (Public Breeder), Iowa State Univ. - Program Chair, Tuesday General Session<br />
-Seth Naeve (Public Agronomist/Physiologist), Univ. Minnesota, Co-Chair, Tuesday General Session<br />
-
-<h3>Monday, February 17</h3>
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<tbody>
-    <tr><td class="uk-padding-small">1:30</td><td class="uk-padding-small">1:40</td><td>Katy Martin Rainey</td><td>Welcome and announcements</td></tr>
-    <tr><td class="uk-padding-small">1:40</td><td class="uk-padding-small">2:10</td><td>Kristin Bilyeu &amp; Tiffany Langewisch, USDA-ARS, Columbia, MO</td><td>Developing an E Gene Molecular Model for Soybean Maturity Groups</td></tr>
-    <tr><td class="uk-padding-small">2:10</td><td class="uk-padding-small">2:40</td><td>Brian Diers, Univ. Illinois</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Diers_SBW2014.pdf'>SoyNAM Project Update</a></td></tr>
-    <tr><td class="uk-padding-small">2:40</td><td class="uk-padding-small">2:50</td><td colspan='2'> Coffee Break</td></tr>
-    <tr><td class="uk-padding-small">2:50</td><td class="uk-padding-small">3:20</td><td>Yong-qiang Charles An,<br />USDA-ARS, St. Louis, MO</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Yong-qiang_SBW2014.pdf'>Exploring Soybean Transcript Polymorphisms to Identify Gene Variants and Functional Markers for Seed Quality Improvement</a></td></tr>
-    <tr><td class="uk-padding-small">3:20</td><td class="uk-padding-small">3:50</td><td>Jianxin Ma, Purdue Univ.</td><td>Genetic Basis of Soybean Stem Growth Habit and its Potential Application for Development of High-yielding, Climate-resilient Soybean</td></tr>
-    <tr><td class="uk-padding-small">3:50</td><td class="uk-padding-small">4:20</td><td>Mike Gore, Cornell Univ.</td><td>Genome-Wide Analysis of Metabolic Traits in Maize</td></tr>
-    <tr><td class="uk-padding-small">4:20</td><td class="uk-padding-small">4:50</td><td>Peter Goldsmith, Univ. Illinois</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Goldsmith_SBW2014.pdf'>Tropical Soybean Research: USAID's New Soybean Innovation Lab</a></td></tr>
-    <tr><td class="uk-padding-small">4:50</td><td class="uk-padding-small">5:20</td><td>John Becherer, CEO,<br />United Soybean Board</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Becherer_SBW2014.pdf'>Considerations in Capturing Soybean Component Value from the Soybean Value Chain</a></td></tr>
-    <tr><td class="uk-padding-small">5:20</td><td class="uk-padding-small">&nbsp;</td><td>Katy Martin Rainey</td><td>Announcements and Adjourn</td></tr>
-</tbody>
-</table>
-
-<h3>Tuesday, February 18, General Session</h3>
-
-<div class="uk-text-center">
-Chair, Public Breeder: Danny Singh, Iowa State<br />
-Co-Chair, Public Agronomist/Physiologist: Seth Naeve, Univ. Minnesota<br />
+<div>
+<h4>Workshop Coordinators:</h4>
+    <p>
+        <strong>Katy Martin Rainey</strong> (Public Breeder), Purdue Univ. - Overall planning and coordination<br /> 
+        <strong>Hari Ramasubramaniam</strong> (Plant Pathologist), Syngenta Seeds Inc. - Hotel arrangements<br />
+        <strong>Danny Singh</strong> (Public Breeder), Iowa State Univ. - Program Chair, Tuesday General Session<br />
+        <strong>Seth Naeve</strong> (Public Agronomist/Physiologist), Univ. Minnesota, Co-Chair, Tuesday General Session
+    </p>
 </div>
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-    <tr><td class="uk-padding-small">7:00</td><td>8:00</td><td colspan='2'>Continental Breakfast, Versailles Foyer</td></tr>
-    <tr><td class="uk-padding-small">8:00</td><td>8:05</td><td>Danny Singh</td><td>General Introduction</td></tr>
-    <tr><th colspan='4'>SESSION I: Soybean Drought Stress | Chairs: Tommy Carter, USDA-ARS, Raleigh  &amp; George Graef, Univ. Nebraska</th></tr>
-    <tr><td class="uk-padding-small">8:05</td><td>8:35</td><td>Tom Sinclair, NC State</td><td>Physiological Input for Improved Soybean Drought Tolerance</td></tr>
-    <tr><td class="uk-padding-small">8:35</td><td>9:05</td><td>Jim Specht, Univ. Nebraska</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Specht_SBW2014.pdf'>Soybean Yield Response to Scarce or Abundant Water- Retrospect and Prospect</a></td></tr>
-    <tr><td class="uk-padding-small">9:05</td><td>9:30</td><td>Pengyin Chen, Univ. Arkansas</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Chen_SBW2014.pdf'>Drought Tolerance Traits for Improving Soybean Yield Under Stress</a></td></tr>
-    <tr><td class="uk-padding-small">9:30</td><td>9:55</td><td>Charlie Messina, Pioneer</td><td>Developing Drought Tolerant Maize Hybrids for the US Corn-belt: Discovery to Product</td></tr>
+
+<h3>Monday, February 17, 2014</h3>
+<div class="uk-overflow-auto">
+	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Katy Martin Rainey, Purdue Univ.</td><td>Welcome and announcements</td></tr>
+            <tr><td>Kristin Bilyeu &amp; Tiffany Langewisch, USDA-ARS</td><td>Developing an E Gene Molecular Model for Soybean Maturity Groups</td></tr>
+            <tr><td>Brian Diers, Univ. Illinois</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Diers_SBW2014.pdf'>SoyNAM Project Update</a></td></tr>
+            <tr><td colspan='2'> Coffee Break</td></tr>
+            <tr><td>Yong-qiang Charles An, USDA-ARS</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Yong-qiang_SBW2014.pdf'>Exploring Soybean Transcript Polymorphisms to Identify Gene Variants and Functional Markers for Seed Quality Improvement</a></td></tr>
+            <tr><td>Jianxin Ma, Purdue Univ.</td><td>Genetic Basis of Soybean Stem Growth Habit and its Potential Application for Development of High-yielding, Climate-resilient Soybean</td></tr>
+            <tr><td>Mike Gore, Cornell Univ.</td><td>Genome-Wide Analysis of Metabolic Traits in Maize</td></tr>
+            <tr><td>Peter Goldsmith, Univ. Illinois</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Goldsmith_SBW2014.pdf'>Tropical Soybean Research: USAID's New Soybean Innovation Lab</a></td></tr>
+            <tr><td>John Becherer, United Soybean Board</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Becherer_SBW2014.pdf'>Considerations in Capturing Soybean Component Value from the Soybean Value Chain</a></td></tr>
+            <tr><td>Katy Martin Rainey</td><td>Announcements and Adjourn</td></tr>
+        </body>
+    </table>
+</div>
+
+<h3>Tuesday, February 18, 2014</h3>
+<div class="uk-overflow-auto">
+	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+         </thead>
+         <body>
+
+    <tr><td>Danny Singh</td><td>General Introduction</td></tr>
+    <tr><th colspan='2'>SESSION I: Soybean Drought Stress | Chairs: Tommy Carter, USDA-ARS  &amp; George Graef, Univ. Nebraska</th></tr>
+    <tr><td>Tom Sinclair, NC State</td><td>Physiological Input for Improved Soybean Drought Tolerance</td></tr>
+    <tr><td>Jim Specht, Univ. Nebraska</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Specht_SBW2014.pdf'>Soybean Yield Response to Scarce or Abundant Water- Retrospect and Prospect</a></td></tr>
+    <tr><td>Pengyin Chen, Univ. Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Chen_SBW2014.pdf'>Drought Tolerance Traits for Improving Soybean Yield Under Stress</a></td></tr>
+    <tr><td>Charlie Messina, Pioneer</td><td>Developing Drought Tolerant Maize Hybrids for the US Corn-belt: Discovery to Product</td></tr>
     <tr><td class="uk-padding-small">9:55</td><td>10:10</td><td colspan='2'>Coffee Break</td></tr>
     <tr><th colspan='4'>SESSION II: Phenotyping and Physiology of Soybean Traits | Chairs: Brian Diers, Univ. Illinois &amp; Jim Specht, Univ. Nebraska</th></tr>
     <tr><td class="uk-padding-small">10:10</td><td>10:35</td><td>Mike Gore, Cornell Univ.</td><td>High Throughput Phenotyping: Research and Potential Applications in Crops</td></tr>
@@ -81,6 +79,8 @@ Co-Chair, Public Agronomist/Physiologist: Seth Naeve, Univ. Minnesota<br />
     <tr><td class="uk-padding-small">4:15</td><td>4:35</td><td>Jim Sutter, CEO,<br />US Soybean Export Council</td><td>What our international purchasers are requesting</td></tr>
     <tr><td class="uk-padding-small">4:35</td><td>&nbsp;</td><td colspan='2'>Announcements &amp; Adjourn</td></tr>
 </table>
+</body>
+</div>
 
 <h3>Wednesday, February 19</h3>
 <table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
